--- a/about-marriages.html
+++ b/about-marriages.html
@@ -24,7 +24,9 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<p>This is placeholder.</p>
+					<h2>About Marriages</h2>
+					<p><img src="images/attempt-2.jpg" width="734" height="384" alt="about" /></p>
+					<p>Marriages are simple but complicated. They are not just a wedding day ceremony but a commiment made to spend a lifetime with each partner. For a good marriages to be successful it takes dedication, respect, understanding, communication, and love. There are many forms of marriages of different cultures and religions. Which one is you favorite?</p>
 					<!-- InstanceEndEditable -->
     </div>
   </div>
