--- a/christianity.html
+++ b/christianity.html
@@ -24,7 +24,59 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<p>This is placeholder.</p>
+					<p>Congratulations! You&rsquo;re engaged!</p>
+					<p>Before you happily starting scribbling a list of guests and giggling at how great you gift list will be though, you will need to organise a wedding ceremony that suits you both – and if you both are practising Catholics, you will no doubt want to have a Catholic wedding.</p>
+					<p>If that&rsquo;s the case, you can choose to have your Catholic ceremony held with Holy Communion included for both of you, (called a Nuptial Mass) or, for example, if one of you is Catholic and one isn&rsquo;t, you can choose to have your Catholic ceremony - including readings and prayers - but no Communion.</p>
+					<p>The vows are the same, whichever version you choose!</p>
+					<h3>First you need to see your parish priest…</h3>
+					<p>First things first.</p>
+					<p>Before you hot-foot it off to choose a frock and suit, you will need to make an appointment with your local parish priest to check he is willing to perform the ceremony, check the church is free on the date you have chosen, pay an initial deposit (towards the church service being held, the heating and lighting on the day and the choir if you choose to have them there) and fill out a few forms giving your names and addresses for the legal publication of your wedding &lsquo;banns&rsquo;.</p>
+					<p>Don&rsquo;t worry, this simply means announcing your intended marriage and the banns are published by being read aloud during the service on three successive Sundays preceding the ceremony. The congregation is invited to register objections, if they have any (fingers crossed they don&rsquo;t!) You will usually be expected to be in attendance on at least one of the three occasions when the banns are published.</p>
+					<p>If you both live in different parishes, or are getting married in a parish other than the one in which you are registered, the banns need to be published in both parishes.</p>
+					<p>The church that will not be holding the ceremony will issue a certificate stating that the banns have been published. This certificate needs to be produced to the officiating minister before the ceremony can proceed. If your wedding doesn&rsquo;t go ahead within three months of the banns being published, the banns will have to be published again.</p>
+					<p>If only one of you is Catholic, banns are not published, so the priest of the Catholic partner will have to give permission for the marriage to take place in a Catholic Church. Your parish priest will also consider whether to apply for a Dispensation to Marry. This is a permit issued by the Catholic Church giving permission for a Catholic to marry someone who isn&rsquo;t a Catholic.</p>
+					<p>Phew! Right, once that stage is complete, you can then progress on to planning the wedding ceremony…</p>
+					<h3>Now you can plan your ceremony…</h3>
+					<p>Don&rsquo;t be daunted, take a look at our wedding reading <a href="http://www.confetti.co.uk/article/view/5078-8180-0-What_are_my_options_for_a_church_wedding__Religious_Wedding.do">options for a church wedding</a>, our guide to <a href="http://www.confetti.co.uk/article/view/5080-8184-0-Common_themes_in_Bible_readings_Wedding_Readings.do">common themes in Bible readings</a>, selection of <a href="http://www.confetti.co.uk/article/view/5081-8184-0-Selections_of_Old_Testament_readings_Wedding_Readings.do">Old Testament readings</a>, <a href="http://www.confetti.co.uk/article/view/5084-8184-0-Selection_of_New_Testament_readings_Wedding_Readings.do">New Testament readings</a>, and more general <a href="http://www.confetti.co.uk/article/view/7879-8184-0-Religious_readings_Wedding_Readings.do">religious readings</a>.</p>
+					<p>The priest will also be able to advise you on all areas of the service, and help with your choice of readings, psalms and hymns.</p>
+					<p>He will provide you with a sample of possible readings and hymns can you choose to have non-religious as well as religious readings, but as a general rule, it is best to keep non-religious readings for a moment like the signing of the register, when they will not be seen to be &lsquo;competing&rsquo; with the Bible readings.</p>
+					<p>Just check with your priest of this is ok.</p>
+					<p>The same is true for music, which in principle should all have a religious theme.</p>
+					<p>If the parish has an organist and choir available, you can request their services (but remember, they will expect to be paid).</p>
+					<p>If you have friends who play other instruments they may be allowed to play, on condition that the choice of music respects the sacred character of the occasion and place.</p>
+					<h3>Who you can invite</h3>
+					<p>There is no absolutely no restriction on who you can invite to a Catholic wedding (just as long as they all fit in the church!) and guests should assemble about 15 to 20 minutes before the start of the ceremony.</p>
+					<p>Most parish churches help non-churchgoers to follow what is happening during your wedding ceremony by providing a booklet. Alternatively, it is a good idea for you to print off (or have made for you) order of service sheets yourselves, (take a look at <a href="http://www.confetti.co.uk/article/view/5035-8196-0-On_the_day_stationery_Wedding_Invitations.do">our on-the-day-stationery</a>, that lets everyone follow what readings and prayers you have chosen – and gives the words for prayers such as &lsquo;Our Father&rsquo;, so that everyone can join in.</p>
+					<h3>The order of service</h3>
+					<p>Dress, make-up and bridesmaids all in place? Then you are all set for the ceremony, which will begin in the normal way, with the bride, (on her father's arm, although this is up to you), and bridesmaids processing down the aisle to the groom and priest.</p>
+					<p>During the procession, an Entry Antiphon (a passage from the bible which may be sung or recited) may be used or a hymn will be sung.</p>
+					<p>You will then sit or kneel on special cushions in front of the priest.</p>
+					<p>If you have chosen not to have a Nuptial Mass, the service begins with a welcome from the priest and the congregation are invited to make the sign of the cross.</p>
+					<p>An opening prayer is spoken by the priest, after which the congregation are invited to sit. Readings from the Old or New Testament follow that and the priest will then speak about Christian marriage, the sacrament and the responsibilities that married people possess.</p>
+					<p>You will have spoken to your priest about the order of service for your wedding beforehand (and chosen your readings and psalms), but as a rough guide, the service will then progress like this:</p>
+					<ul>
+					  <li>The priest reads a Gospel reading (that you have chosen).</li>
+					  <li>The priest gives a short homily or sermon.</li>
+					  <li>You exchange vows.</li>
+					  <li>The priest blesses the rings and the you place them on each other&rsquo;s finger, saying, &lsquo;Take this ring as a sign of my love and fidelity, in the Name of the Father, and of the Son, and of the Holy Spirit.&rsquo;</li>
+					  <li>Some short bidding prayers are read for you.</li>
+					  <li>The service continues with the celebration of the Nuptial Mass (if you have opted for this) the bridesmaids will take their seats in a reserved pew at the front and the pair of you will return to the sanctuary where you kneel, often on cushions. The Mass continues with a variety of prayers, including the emotive Rite of Peace and the couple receive Communion, followed by the rest of the congregation.</li>
+					  <li>The priest reads a Nuptial Blessing over the couple if not.</li>
+					  <li>The priest gives a final blessing.</li>
+					  <li>The couple and their witnesses sign the register.</li>
+					  <li>The priest will then introduce you as a newly married couple!</li>
+				    </ul>
+					<p>You will then be a happily married bride and groom and you can parade back down the aisle of the church with huge grins on your faces!</p>
+					<h3>Practical points to bear in mind…</h3>
+					<ol>
+					  <li><strong>The order of seating</strong> at a Catholic wedding is up to you. Bear in mind though, that if you are having a Mass, and especially if it is at a scheduled Mass time, you are likely to be joined by other parishioners who are not your guests. They will usually be discreet and leave the front rows for your friends and family.</li>
+					  <li><strong>You can decorate the church with flowers,</strong> but rather than strip the church of them afterwards, couples usually leave some of their flowers as a sort of &lsquo;votive offering&rsquo; to decorate the church after the wedding -- a gesture that&rsquo;s always appreciated by the priest and his parishioners.</li>
+					  <li><strong>A <a href="http://www.confetti.co.uk/weddingDirectory/search/0.do">photographer</a></strong> is allowed and usually video cameras, although sometimes the priest might impose restrictions on when and where they can film. Have a chat to the priest about this beforehand.</li>
+					  <li><strong>Rules on <a href="http://www.confetti.co.uk/category/navigation/8591-0-Confetti_Table_Decorations.do">confetti</a> throwing</strong> vary from parish to parish too (as it does make a big mess for them to clear up afterwards!) Have a quick check with the priest about this.</li>
+					  <li><strong>It&rsquo;s customary to give the priest</strong> an offering for his efforts, which will have included a fair amount of paperwork. How much is down to you and what you can afford. Between £50 and £70 is probably reasonable; more is generous. The groom or best man, or sometimes the bride&rsquo;s father will usually give the offering to the priest in an envelope after the service. It&rsquo;s customary to invite the priest to the reception too… he might be glad of a relaxing drink!</li>
+				    </ol>
+					<p>&nbsp;</p>
+					<p>&nbsp;</p>
 					<!-- InstanceEndEditable -->
     </div>
   </div>
