--- a/extras.html
+++ b/extras.html
@@ -24,7 +24,16 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<p>This is placeholder.</p>
+					<p>For more information visit these website
+                    below.<ul>
+					  <li><a href="http://www.confetti.co.uk/article/view/5042-8180-0-Plan_the_perfect__religious_wedding_ceremony_Religious_Wedding.do">http://www.confetti.co.uk/article/view/5042-8180-0-Plan_the_perfect__religious_wedding_ceremony_Religious_Wedding.do</a></li>
+					  <li><a href="http://www.hinduwedding.info/marriage-ceremony.html">http://www.hinduwedding.info/marriage-ceremony.html</a></li>
+					  <li><a href="http://christianity.about.com/od/weddingceremony/a/weddingtraditions.htm">http://christianity.about.com/od/weddingceremony/a/weddingtraditions.htm</a></li>
+					  <li><a href="http://www.africaguide.com/culture/weddings.htm">http://www.africaguide.com/culture/weddings.htm</a></li>
+					  <li><a href="http://www.chcp.org/wedding.html">http://www.chcp.org/wedding.html</a></li>
+					  <li><a href="http://www.aish.com/jl/l/m/48969841.html">http://www.aish.com/jl/l/m/48969841.html</a></li>
+					  <li><a href="http://worldweddingtraditions.com/locations/east_europe_traditions/greek_wedding_traditions.html">http://worldweddingtraditions.com/locations/east_europe_traditions/greek_wedding_traditions.html</a></li>
+				    </ul>
 					<!-- InstanceEndEditable -->
     </div>
   </div>
