--- a/greek.html
+++ b/greek.html
@@ -24,7 +24,40 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<p>This is placeholder.</p>
+					<p>In Britain, there are 30,000 people of the Greek Orthodox faith from the mainland of Greece, and a further 300,000 Cypriots. The Greek Orthodox Church and the Roman Catholic Church were in Eucharistic Communion until 1054,when the churches split over differences of dogma and ecclesiastical administration.The Greek Orthodox wedding is very similar, in many ways, to a traditional Church of England wedding. The rituals of the day are alike, but there is little flexibility in the service itself -- you cannot have readings or music that is not already incorporated into the service, nor is any secular content allowed.</p>
+					<h3>What happens at a Greek Orthodox wedding</h3>
+					<ul type="disc">
+					  <li>The ceremony is performed by a priest in a Greek Orthodox Church and lasts between 40 minutes and an hour.</li>
+					  <li>Until recently, marriage in a Greek Orthodox Church was not legally binding -- a couple also had to take part in a civil ceremony in a register office or licensed venue. Now however, there are various venues in London where the religious and legal sides are combined in one ceremony. For more details, call the headquarters of the Archdiocese of Thyateira and Great Britain on 020 7723 4787.</li>
+				    </ul>
+					<h3>Planning your Greek Orthodox wedding</h3>
+					<h3>Setting the date</h3>
+					<ul type="disc">
+					  <li>There are a number of days when it is forbidden to get married, including the fasting period 40 days prior to Easter and the 40 days prior to Christmas for the same reason. The first 15 days of August, a period dedicated to celebrating the Virgin Mary, are also out of bounds. It&rsquo;s best to consult your local church as there are additional days on which marriage would be inappropriate.</li>
+					  <li>Superstition has it that marriage in a Leap Year is unlucky.</li>
+					  <li>Marriage can take place at virtually any time of the day, in accordance with the requirements of the priest. The only time that you can&rsquo;t get married is during Sunday Mass.</li>
+				    </ul>
+					<h3>Booking the church</h3>
+					<p>The venue for the Greek Orthodox wedding is a Greek Church and it's important to check with the priest about both his and the venue's availability. It's usual to get married in the local church, so there's not a huge amount of choice in terms of venue for the actual wedding. One important thing is parking availability, as often these churches are in the centre of town and parking can be limited. Also, it's worth bearing in mind that it's customary to have a few meetings with the priest prior to getting married, so it's best to organise your date as early as possible so that you can attend all of these in good time.</p>
+					<h3>The wedding service</h3>
+					<p>It&rsquo;s not possible to change the format of the service in any significant way. There is no music other than hymns, and the readings are all taken from religious texts. You cannot bring in musicians or music from outside.</p>
+					<p>To put their own unique stamp on the day, most couples concentrate on incorporating other kinds of music or readings into the wedding reception.</p>
+					<h3>Greek Orthodox wedding traditions</h3>
+					<ul type="disc">
+					  <li>Rehearsals sometimes take place, but they are not compulsory.</li>
+					  <li>The bride and groom can invite guests from all religious denominations. Although everyone is welcome to the celebrations, it is preferred that only those who have been baptised into the faith themselves enter the church itself.</li>
+					  <li>The Greek Orthodox community is very tight-knit and centres around the church, so everyone in it will know about the impending marriage. The community is traditionally asked to the wedding and reception and plays a large part in the atmosphere of the ceremony itself.</li>
+					  <li>The bride wears a white wedding dress with a long train. The groom wears a traditional black suit with a bow tie. Guests should wear smart outfits.</li>
+				    </ul>
+					<h3>On the big day</h3>
+					<ul type="disc">
+					  <li>As in any traditional Christian service, the couple do not see one another on the day. The groom arrives before the bride and traditionally men sit on the right, women on the left (Although nowadays people sit where they want).</li>
+					  <li>The bride arrives with her father, or a male relative. The groom travels to the church with his best man.</li>
+					  <li>Traditionally, the service itself is paid for by the bridesmaids. It begins with the betrothal ceremony, which includes a blessing and the placing of a ring on the right hand of the bride and groom. This is conducted by the priest.</li>
+					  <li>During the ceremony, the bride and groom are given a cup of wine and crowns are placed on their heads. This is separate to Holy Communion, which takes place prior to the wedding day.</li>
+					  <li>During the service the bride and groom kiss the Bible and walk around the altar-like ceremonial table three times to recognise the Holy Trinity and their happiness at the union of the two families.</li>
+					  <li>At the end of the service, the wedding party leaves the church for the reception where there is dancing, including the money dance when guests pin money to the couple&rsquo;s clothes.</li>
+				    </ul>
 					<!-- InstanceEndEditable -->
     </div>
   </div>
