--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
 					<!-- InstanceBeginEditable name="content" -->
 					<div class="labels"> <table width="" border="1">
 					  <tr>
-					    <td width="514" rowspan="7"><h1><strong>The Marriages</strong><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></h1></td>
-					    <td width="368"><div align="center"><a href="legal.html">Legal</a></div></td>
+					    <td width="514" rowspan="7"><h2><strong>The Marriages</strong></h2>
+				        <h1><img src="images/homepage.jpg" width="500" height="500" alt="Homepage" /></h1></td>
+					    <td width="368"><div align="center"><a href="african.html">African</a></div></td>
 				      </tr>
 					  <tr>
 					    <td><div align="center"><a href="jewish.html">Jewish</a></div></td>
