--- a/videos.html
+++ b/videos.html
@@ -24,7 +24,12 @@
 				Marriages<strong>: One Name Different Versions</strong></h1>
 	<div class="main">
 					<!-- InstanceBeginEditable name="content" -->
-					<p>This is placeholder.</p>
+					<h2>Videos</h2><iframe width="560" height="315" src="http://www.youtube.com/embed/M6TwhlAWYIE" frameborder="0" allowfullscreen></iframe>
+                     <p>Jewish Wedding</p>
+                     <iframe width="560" height="315" src="http://www.youtube.com/embed/PhLjNsiiNgU" frameborder="0" allowfullscreen></iframe> <p> Chinese Wedding</p>
+                     <iframe width="560" height="315" src="http://www.youtube.com/embed/-lbMv5_a1jo" frameborder="0" allowfullscreen></iframe> <p>Hindu Wedding</p>
+                     <iframe width="560" height="315" src="http://www.youtube.com/embed/g0ZYAOukLcM" frameborder="0" allowfullscreen></iframe> <p> Arabic Muslim Wedding </p>
+                     
 					<!-- InstanceEndEditable -->
     </div>
   </div>
